<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context=".VerifyAcountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_title_verifyAccount"
                android:textColor="@color/colorLilWhite"
                android:textSize="38sp"
                android:textAlignment="center"
                android:layout_above="@+id/tv_desc_verify">
            </TextView>
            <TextView
                android:id="@+id/tv_desc_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_desc_verifyAccount"
                android:textColor="@color/colorLilWhite"
                android:textAlignment="center"
                android:layout_above="@+id/et_verify_verify"
                android:layout_marginTop="8dp">
            </TextView>
            <EditText
                android:id="@+id/et_verify_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_enterVerifCode_verifyAccount"
                android:textColorHint="#99ffffff"
                android:textAlignment="center"
                android:backgroundTint="@color/colorLilWhite"
                android:padding="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_alignParentBottom="true">
            </EditText>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_send_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_custom"
                android:text="@string/str_btnsend_verifyAccount"
                android:textColor="@color/colorLilWhite"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp">
            </Button>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_send_verify"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_questioncode_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_questionVerify_verifyAccount"
                    android:textColor="#dadada">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_txtbtnResend_verifyAccount"
                    android:textColor="@color/colorLilWhite"
                    android:textStyle="bold"
                    android:layout_toEndOf="@+id/tv_questioncode_verify"
                    android:layout_marginStart="4dp">
                </TextView>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>