<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorLilWhite"
        android:background="@drawable/ic_header">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_register"
        android:layout_alignParentBottom="true"
        android:padding="32dp">

        <!--    Form Username,Email,Phone Number    -->
        <EditText
            android:id="@+id/frm_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#dadada"
            android:layout_weight="1"
            android:textSize="14sp"
            android:hint="@string/str_usernamehint_register">
        </EditText>
        <EditText
            android:id="@+id/frm_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:backgroundTint="#dadada"
            android:hint="@string/str_emailhint_register">
        </EditText>
        <EditText
            android:id="@+id/frm_phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:backgroundTint="#dadada"
            android:hint="@string/str_phonehint_register">
        </EditText>

        <!--    Radio Button Group Gender    -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_male_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/str_male_register"
                android:textColor="#a3a3a3"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:button="@drawable/radio_button_custom"
                android:onClick="onRadioButtonClicked">
            </RadioButton>
            <RadioButton
                android:id="@+id/radio_female_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_female_register"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#a3a3a3"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:button="@drawable/radio_button_custom"
                android:onClick="onRadioButtonClicked">
            </RadioButton>
        </RadioGroup>

        <!--    Spinner Blood Type, Reshus    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_spinner"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spn_goldar_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:spinnerMode="dropdown"
                    android:paddingEnd="32dp"
                    android:paddingStart="0dp"
                    android:textSize="14sp">
                </Spinner>
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_register_dropdown" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="32dp"
                android:background="@drawable/background_spinner"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spn_rhesus_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:spinnerMode="dropdown"
                    android:layout_centerVertical="true"
                    android:paddingEnd="32dp"
                    android:paddingStart="0dp"
                    android:textSize="16sp">
                </Spinner>
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_register_dropdown" />
            </RelativeLayout>

        </LinearLayout>

        <!--    Form Password, Retype Password    -->
        <EditText
            android:id="@+id/frm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#dadada"
            android:textSize="14sp"
            android:hint="@string/str_passwordhint_register">
        </EditText>
        <EditText
            android:id="@+id/frm_repassword_regsiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#dadada"
            android:hint="@string/str_repasswordhint_register"
            android:textSize="14sp">
        </EditText>

        <!--    Radio Button Personal, Organization    -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_personal_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/str_personal_register"
                android:textSize="14sp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="#a3a3a3"
                android:button="@drawable/radio_button_custom"
                android:onClick="onRadioButtonClicked">
            </RadioButton>
            <RadioButton
                android:id="@+id/radio_organization_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_organization_register"
                android:paddingStart="18dp"
                android:paddingEnd="0dp"
                android:textSize="14sp"
                android:textColor="#a3a3a3"
                android:button="@drawable/radio_button_custom"
                android:onClick="onRadioButtonClicked">
            </RadioButton>
        </RadioGroup>

        <!--    Spinner Job    -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/background_spinner"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/job_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:spinnerMode="dropdown"
                android:paddingEnd="32dp"
                android:paddingStart="0dp"
                android:textSize="14sp">
            </Spinner>
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_register_dropdown" />
        </RelativeLayout>

        <EditText
            android:id="@+id/frm_address_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#dadada"
            android:layout_weight="1"
            android:textSize="14sp"
            android:hint="@string/str_address_register">
        </EditText>
        <EditText
            android:id="@+id/frm_location_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/str_location_register"
            android:backgroundTint="#dadada"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_blood_needed_location">
        </EditText>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_weight="1"
            android:text="@string/str_agree_register"
            android:textSize="14sp"
            android:checked="true"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:button="@drawable/checkbox_custom"
            android:textColor="#a3a3a3">
        </CheckBox>
        <Button
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@drawable/button_text_color_blue"
            android:background="@drawable/button_costum_blue"
            android:text="@string/str_btnregister_register">
        </Button>
    </LinearLayout>

</RelativeLayout>