<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity"
    android:background="@color/colorLightBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_title_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_title_successReg"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textColor="@color/colorLilWhite"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_above="@+id/tv_thanks_succes"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true">
            </TextView>
            <TextView
                android:id="@+id/tv_thanks_succes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_thankyou_successReg"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/colorLilWhite"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_verify_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_custom"
                android:text="@string/str_btnverify_successReg"
                android:textSize="14sp"
                android:textColor="@color/colorLilWhite"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">
            </Button>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>